Add the cursor pointer and make the fields required.

--- a/Travel website/travelresponsive.html
+++ b/Travel website/travelresponsive.html
@@ -953,20 +953,20 @@
 
                             <div class="w-[80%] text-[14px]">
                                 <form class="mb-[4%]" action="https://sheetdb.io/api/v1/4yxlwswacmo5t" method="POST" id="contact-form">
-                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] px-[5%] my-[2%]" type="text" name="name" id="" placeholder="Name">
+                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] px-[5%] my-[2%]" type="text" name="name" id="" placeholder="Name" required>
 
-                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] px-[5%] my-[2%]" type="email" name="email" id="" placeholder="Email ID">
+                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] px-[5%] my-[2%]" type="email" name="email" id="" placeholder="Email ID" required>
 
-                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] px-[5%] my-[2%]" type="text" name="subject" id="" placeholder="Subject">
+                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] px-[5%] my-[2%]" type="text" name="subject" id="" placeholder="Subject" required>
 
-                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] pb-[20%] px-[5%] my-[2%]" type="text" name="message" id="" placeholder="Message">
+                                    <input class="w-full rounded-lg bg-slate-200 py-[2%] pb-[20%] px-[5%] my-[2%]" type="text" name="message" id="" placeholder="Message" required>
 
                                     <label class="text-gray-600" for="">
                                         <input type="checkbox"> 
                                         Subscribe to our newsletter
                                     </label>
 
-                                    <button type="submit" class="bg-blue-800 p-[4%] w-full my-[5%] rounded-4xl text-white font-semibold lg:my-[1%]">
+                                    <button type="submit" class="bg-blue-800 p-[4%] w-full my-[5%] rounded-4xl text-white font-semibold lg:my-[1%] cursor-pointer">
                                         Send
                                     </button>
                                 </form>
@@ -1169,3 +1169,4 @@
 </body>
 
 </html>
+
